Fix Excalidraw top padding on mobile

--- a/src/integrations/community-plugins.scss
+++ b/src/integrations/community-plugins.scss
@@ -198,3 +198,8 @@ body:not(.mobile-stable) .view-content.notebook-navigator-mobile {
     }
   }
 }
+
+// Excalidraw https://github.com/zsviczian/obsidian-excalidraw-plugin
+body.is-mobile .excalidraw .FixedSideContainer {
+  padding-top: 0;
+}
